<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/transition_name_navigational_transition"
    tools:context=".MessageProviderActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            app:navigationIcon="@drawable/manong_back_white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            style="@style/Widget.Manong.Toolbar.Ordinary"
            android:background="@color/toolbarBackground"
            android:id="@+id/toolbar"
            app:title="Chat"
            app:titleTextColor="@color/serviceGridBackgroundColor"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->

    <RelativeLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/loginPageBackgroundColor"
        tools:targetApi="lollipop">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/messageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:layout_below="@+id/adView"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <ImageView
                android:id="@+id/addMessageImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:tint="@color/textColorPrimary"
                android:src="@mipmap/ic_add_black_24dp" />

            <EditText
                android:hint="@string/manong_message_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/messageEditText"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:inputType="text" />

            <android.support.design.button.MaterialButton
                style="@style/Widget.Manong.Button.Send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manong_text_send"
                android:enabled="false"
                android:id="@+id/sendButton"
                android:layout_gravity="bottom"/>

        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/text_first_message"
            android:text="Send your First Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
