<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigational_transition_all_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".ChildActivity"
    tools:targetApi="lollipop">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        app:elevation="6dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            app:navigationIcon="@drawable/manong_close_menu"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            style="@style/Widget.Manong.Toolbar.Ordinary"
            android:id="@+id/toolbar"
            app:title="@string/manong_job_request_title"
            app:contentInsetStart="0dp"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <com.example.johnrobert.manongcustomer.ForegroundRelativeLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="#F0F0F0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/first_container"
            android:transitionName="@string/transition_name_navigational_transition"
            android:elevation="1dp"
            android:paddingBottom="20dp"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_service_name"
                android:transitionName="transition_service_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="20sp"
                android:fontFamily="@font/rubik_medium"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp" />
            <!--android:textAppearance="@style/SettingsTextAppearance"-->

            <TextView
                android:layout_marginStart="16dp"
                android:layout_below="@+id/text_service_name"
                android:id="@+id/textview_id_icon"
                android:text="ID"
                android:textSize="12sp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_below="@+id/text_service_name"
                android:id="@+id/text_service_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_alignStart="@+id/textview_id_icon"
                android:textAppearance="@style/SettingsTextAppearance"/>

            <TextView
                android:id="@+id/text_request_info"
                android:layout_marginTop="6dp"
                android:layout_below="@+id/text_service_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorControlActivated"
                android:text="@string/manong_text_info"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

            <ImageView
                android:id="@+id/image_info_logo"
                android:layout_marginEnd="4dp"
                android:layout_below="@+id/text_service_name"
                android:layout_toStartOf="@+id/text_request_info"
                app:srcCompat="@drawable/ic_info_black_24dp"
                android:layout_marginTop="4dp"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:contentDescription="@string/main_content_description_implementation_image" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cancelled_container"
            android:visibility="gone"
            android:layout_below="@+id/first_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="This request has already cancelled."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/second_container"
            android:layout_below="@+id/first_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_clock"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_av_timer_black_24dp"
                android:layout_marginBottom="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/image_clock"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/textColorPrimary"
                    android:text="We are waiting for quotes from vendors."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@color/textColorPrimary"
                    android:text="We will notify you as soon as we receive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@color/textColorPrimary"
                    android:text="quotes for your request."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scroll_provider_container"
            android:elevation="0dp"
            android:layout_below="@+id/first_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/service_provider_container"
                android:layout_margin="16dp"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Service Provider(s)"
                    android:layout_marginBottom="@dimen/padding_normal_16dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

    </com.example.johnrobert.manongcustomer.ForegroundRelativeLayout>

</android.support.design.widget.CoordinatorLayout>